--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/michelecocuccio/simple-react-lightbox.git"
+    "url": "git+https://github.com/Woolly-Mammoth/lightbox-plugin"
   },
   "main": "dist/index.js",
   "module": "dist/index.es.js",
@@ -37,11 +37,7 @@
   ],
   "scripts": {
     "test": "cross-env CI=1 react-scripts test --env=jsdom  --passWithNoTests",
-    "test:watch": "react-scripts test --env=jsdom  --passWithNoTests",
-    "build": "rollup -c",
-    "start": "rollup -c -w",
-    "prepare": "yarn run build",
-    "predeploy": "cd example && yarn install && yarn run build"
+    "test:watch": "react-scripts test --env=jsdom  --passWithNoTests"
   },
   "peerDependencies": {
     "react": "^17.0.2",
@@ -94,12 +90,7 @@
     "eslint-plugin-standard": "^4.1.0",
     "prop-types": "^15.7.2",
     "react-scripts": "^4.0.3",
-    "regenerator-runtime": "^0.13.9",
-    "rollup": "^2.56.2",
-    "rollup-plugin-gzip": "^2.5.0",
-    "rollup-plugin-image": "^1.0.2",
-    "rollup-plugin-peer-deps-external": "^2.2.4",
-    "rollup-plugin-terser": "^7.0.2"
+    "regenerator-runtime": "^0.13.9"
   },
   "files": [
     "dist"
